--- a/acceleration/templates/acceleration-dv-svc.yaml
+++ b/acceleration/templates/acceleration-dv-svc.yaml
@@ -7,7 +7,7 @@ metadata:
     name: {{ .Values.acceleration_dv.service.name }}
     
 spec:
-  type: {{ default "NodePort" .Values.acceleration_calc.service.type }}
+  type: {{ default "NodePort" .Values.acceleration_dv.service.type }}
   selector:
     name: {{ .Values.acceleration_dv.name }}
   ports:
